Favorite Button Near By

--- a/Group9/Views/Components/StoreCollectionCell.xib
+++ b/Group9/Views/Components/StoreCollectionCell.xib
@@ -73,6 +73,9 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" image="32px Icon Button"/>
                                 <state key="selected" image="Info 2"/>
+                                <connections>
+                                    <action selector="favoriteAction:" destination="gTV-IL-0wX" eventType="touchUpInside" id="RTm-go-Mxo"/>
+                                </connections>
                             </button>
                             <view alpha="0.0" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22W-Ra-gcc">
                                 <rect key="frame" x="0.0" y="145" width="215" height="101"/>
