--- a/Group9/Views/Base.lproj/Main.storyboard
+++ b/Group9/Views/Base.lproj/Main.storyboard
@@ -237,6 +237,6 @@
         </namedColor>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="pHl-Gk-nhF"/>
+        <segue reference="DYB-Ld-eDg"/>
     </inferredMetricsTieBreakers>
 </document>
