--- a/Group9/Views/PlaceDetail.storyboard
+++ b/Group9/Views/PlaceDetail.storyboard
@@ -88,7 +88,7 @@
                                                                         <rect key="frame" x="0.0" y="458" width="378" height="37"/>
                                                                         <subviews>
                                                                             <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iVn-v0-su2">
-                                                                                <rect key="frame" x="0.0" y="0.0" width="76" height="37"/>
+                                                                                <rect key="frame" x="0.0" y="0.0" width="75.5" height="37"/>
                                                                                 <color key="backgroundColor" name="westly green"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                 <inset key="contentEdgeInsets" minX="12" minY="8" maxX="12" maxY="8"/>
@@ -106,7 +106,7 @@
                                                                                 </connections>
                                                                             </button>
                                                                             <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OiY-ss-jXf">
-                                                                                <rect key="frame" x="83" y="0.0" width="110.5" height="37"/>
+                                                                                <rect key="frame" x="82.5" y="0.0" width="110.5" height="37"/>
                                                                                 <color key="backgroundColor" name="westly green"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                 <inset key="contentEdgeInsets" minX="12" minY="8" maxX="12" maxY="9"/>
@@ -124,12 +124,12 @@
                                                                                 </connections>
                                                                             </button>
                                                                             <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="1000" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HT2-Nn-dtJ">
-                                                                                <rect key="frame" x="200.5" y="0.0" width="177.5" height="37"/>
+                                                                                <rect key="frame" x="200" y="0.0" width="178" height="37"/>
                                                                                 <color key="backgroundColor" name="westly green"/>
                                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                                 <inset key="contentEdgeInsets" minX="12" minY="8" maxX="12" maxY="8"/>
                                                                                 <inset key="titleEdgeInsets" minX="6" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                                                                <state key="normal" title="Add to Calendar" image="calendar">
+                                                                                <state key="normal" title="Schedule &amp; Plan" image="calendar">
                                                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                                 </state>
                                                                                 <userDefinedRuntimeAttributes>
