--- a/Group9/Views/Components/StoreListTableViewCell.xib
+++ b/Group9/Views/Components/StoreListTableViewCell.xib
@@ -36,7 +36,7 @@
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chevron" translatesAutoresizingMaskIntoConstraints="NO" id="bcN-Hp-KnG">
                         <rect key="frame" x="378" y="16" width="20" height="20"/>
-                        <color key="tintColor" name="westly green"/>
+                        <color key="tintColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="20" id="ITv-w1-Vmt"/>
                             <constraint firstAttribute="width" constant="20" id="akC-ww-Qs9"/>
@@ -120,9 +120,6 @@
         <image name="Chevron" width="13" height="21"/>
         <image name="default-img" width="370" height="290"/>
         <image name="icons8-star-30" width="30" height="30"/>
-        <namedColor name="westly green">
-            <color red="0.44705882352941179" green="0.61568627450980395" blue="0.22352941176470589" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
         <namedColor name="westly green drak">
             <color red="0.21176470588235294" green="0.3843137254901961" blue="0.16862745098039217" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
