--- a/Group9/Views/Components/StoreCollectionCell.xib
+++ b/Group9/Views/Components/StoreCollectionCell.xib
@@ -46,7 +46,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" distribution="equalCentering" alignment="bottom" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="p0R-Kp-kMJ">
-                                <rect key="frame" x="0.0" y="211" width="102.5" height="15"/>
+                                <rect key="frame" x="0.0" y="211" width="106.5" height="15"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icons8-star-30" translatesAutoresizingMaskIntoConstraints="NO" id="BEH-Dv-LIC">
                                         <rect key="frame" x="0.0" y="0.0" width="15" height="15"/>
@@ -55,8 +55,8 @@
                                             <constraint firstAttribute="width" constant="15" id="aNQ-4J-YEb"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0 (0 ratings)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Dg-fX-2jK">
-                                        <rect key="frame" x="22" y="0.5" width="80.5" height="14.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0.0 (0 reviews)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2Dg-fX-2jK">
+                                        <rect key="frame" x="22" y="0.5" width="84.5" height="14.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                         <color key="textColor" red="0.49019607840000001" green="0.52941176469999995" blue="0.52156862749999999" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
